==> ChibiOS/ChibiOS-Contrib/os/hal/ports/NUMICRO/LLD/FLASHv1/hal_efl_lld.c <==
#include "hal.h"
#define NUC123_LFOM_UPPERBOUND 25000000UL
#define NUC123_MFOM_UPPERBOUND 50000000UL
#define FMC_FATCON_LFOM_Pos FMC_FATCON_FOMSEL0_Pos
#define FMC_FATCON_LFOM_Msk FMC_FATCON_FOMSEL0_Msk
#define FMC_FATCON_MFOM_Pos FMC_FATCON_FOMSEL1_Pos
#define FMC_FATCON_MFOM_Msk FMC_FATCON_FOMSEL1_Msk
#define NUC123_PAGE_SIZE   4UL
#define NUC123_SECTOR_SIZE 0x200UL
#define NUC123_LDROM_SIZE 0x1000UL
#define NUC123_EFL_CMD_ERASE     0x22UL
#define NUC123_EFL_CMD_PROG      0x21UL
#define NUC123_EFL_CMD_READ      0UL
#define NUC123_EFL_CMD_CHIPERASE 0x26UL /* Undocumented */
#define NUC123_EFL_DYNAMICALLY_CHECK_CONFIG TRUE

void efl_lld_init(void)
{
  efl_lld_descriptor = (flash_descriptor_t){
      .attributes = FLASH_ATTR_ERASED_IS_ONE | FLASH_ATTR_MEMORY_MAPPED |
                    FLASH_ATTR_REWRITABLE,
      .page_size    = NUC123_PAGE_SIZE,
      .sectors      = NULL,
      .sectors_size = NUC123_SECTOR_SIZE,
  };

#if (NUC123_EFL_USE_EFL1 == TRUE)
  eflObjectInit(&EFLD1);
  EFLD1.bank = 0;
#endif

}

flash_error_t efl_lld_program(void* instance, flash_offset_t offset,
                              size_t n, const uint8_t* pp)
{
  EFlashDriver* devp = (EFlashDriver*)instance;
  const flash_descriptor_t *desc = efl_lld_get_descriptor(instance);
  flash_error_t err  = FLASH_NO_ERROR;
  uint32_t                  data;

  osalDbgCheck((instance != NULL) && (pp != NULL) && (n > 0U));
  osalDbgCheck(((size_t)offset + n) <= (size_t)desc->size);

  osalDbgAssert((devp->state == FLASH_READY) || (devp->state == FLASH_ERASE),
                "invalid state");

  /* No programming while erasing.*/
  if (devp->state == FLASH_ERASE) {
    return FLASH_BUSY_ERASING;
  }

  /* FLASH_PGM state while the operation is performed.*/
  devp->state = FLASH_PGM;

  if (offset % 4) {
    FMC->ISPCMD = NUC123_EFL_CMD_READ;
    FMC->ISPADR = (uint32_t)desc->address + (offset & ~3);
    err         = do_ISP();
    if (err) {
      /* Ready state again.*/
      devp->state = FLASH_READY;
      return err;
    }
    data = FMC->ISPDAT;
    switch (offset % 4) {
    case 1:
      data &= 0xFFFF00FF;
      data |= (*(pp++) << 8);
      if (!(--n)) {
        break;
      }
      /* fallthrough */
    case 2:
      data &= 0xFF00FFFF;
      data |= (*(pp++) << 16);
      if (!(--n)) {
        break;
      }
      /* fallthrough */
    case 3:
      data &= 0x00FFFFFF;
      data |= (*(pp++) << 24);
      if (!(--n)) {
        break;
      }
    }

    FMC->ISPDAT = data;
    FMC->ISPCMD = NUC123_EFL_CMD_PROG;
    err         = do_ISP();
    if (err) {
      /* Ready state again.*/
      devp->state = FLASH_READY;
      return err;
    }

    offset += 4 - (offset % 4);
  }

  FMC->ISPCMD = NUC123_EFL_CMD_PROG;

  while (n >= 4) {
    FMC->ISPADR = (uint32_t)desc->address + offset;
    FMC->ISPDAT = (*(pp + 0)) | (*(pp + 1) << 8) |
                  (*(pp + 2) << 16) | (*(pp + 3) << 24);
    err = do_ISP();
    if (err) {
      /* Ready state again.*/
      devp->state = FLASH_READY;
      return err;
    }
    n -= 4;
    pp += 4;
    offset += 4;
  }

  if (n) {
    FMC->ISPCMD = NUC123_EFL_CMD_READ;
    FMC->ISPADR = (uint32_t)desc->address + offset;
    err         = do_ISP();
    if (err) {
      /* Ready state again.*/
      devp->state = FLASH_READY;
      return err;
    }
    data = FMC->ISPDAT;

    switch (n) {
    case 3:
      data &= 0xFF00FFFF;
      data |= (pp[2] << 16);
      /* fallthrough */
    case 2:
      data &= 0xFFFF00FF;
      data |= (pp[1] << 8);
      /* fallthrough */
    case 1:
      data &= 0xFFFFFF00;
      data |= (pp[0] << 0);
    }
    FMC->ISPDAT = data;
    FMC->ISPCMD = NUC123_EFL_CMD_PROG;
    err         = do_ISP();
  }

  /* Ready state again.*/
  devp->state = FLASH_READY;
  return err;
}

flash_error_t efl_lld_start_erase_sector(void*          instance,
                                         flash_sector_t sector)
{
  EFlashDriver* devp = (EFlashDriver*)instance;
  const flash_descriptor_t *desc = efl_lld_get_descriptor(instance);

  osalDbgCheck(instance != NULL);
  osalDbgCheck(sector < desc->sectors_count);
  osalDbgAssert((devp->state == FLASH_READY) || (devp->state == FLASH_ERASE),
                "invalid state");

  /* No erasing while erasing.*/
  if (devp->state == FLASH_ERASE) {
    return FLASH_BUSY_ERASING;
  }

  /* FLASH_ERASE state while the operation is performed.*/
  devp->state = FLASH_ERASE;

  FMC->ISPCMD = NUC123_EFL_CMD_ERASE;
  FMC->ISPADR = (uint32_t)((sector * (desc->sectors_size)) +
                           desc->address);
  start_ISP();

  return FLASH_NO_ERROR;
}

flash_error_t efl_lld_query_erase(void* instance, uint32_t* msec)
{
  EFlashDriver* devp = (EFlashDriver*)instance;

  /* TODO: figure out an actual amount of time */
  *msec = 0UL;

  /* If there is an erase in progress then the device must be checked.*/
  if (devp->state == FLASH_ERASE) {
    if (FMC->ISPSTA & FMC_ISPSTA_ISPGO_Msk) {
      return FLASH_BUSY_ERASING;
    }

    if (FMC->ISPCON & FMC_ISPCON_ISPFF_Msk) {
      return FLASH_ERROR_HW_FAILURE;
    }

    devp->state = FLASH_READY;
  }

  return FLASH_NO_ERROR;
}

flash_error_t efl_lld_verify_erase(void* instance, flash_sector_t sector)
{
  EFlashDriver* devp = (EFlashDriver*)instance;
  const flash_descriptor_t *desc = efl_lld_get_descriptor(instance);
  flash_error_t err  = FLASH_NO_ERROR;

  osalDbgCheck(instance != NULL);
  osalDbgCheck(sector < desc->sectors_count);
  osalDbgAssert((devp->state == FLASH_READY) || (devp->state == FLASH_ERASE),
                "invalid state");
  /* No verifying while erasing.*/
  if (devp->state == FLASH_ERASE) {
    return FLASH_BUSY_ERASING;
  }

  devp->state = FLASH_READ;

  FMC->ISPCMD = NUC123_EFL_CMD_READ;

  for (size_t i = 0; i < desc->sectors_size; i = i + 4) {
    FMC->ISPADR = (uint32_t)desc->address + (desc->sectors_size * sector) + i;
    err         = do_ISP();
    if (err) {
      break;
    }
    if (FMC->ISPDAT != 0xFFFFFFFF) {
      err = FLASH_ERROR_VERIFY;
      break;
    }
  }

    /* Ready state again.*/
  devp->state = FLASH_READY;
  return err;
}
