==> ChibiOS/ChibiOS-Contrib/os/hal/ports/SAM/SAMD21A/hal_efl_lld.c <==
#include "hal.h"
#include <string.h>
#define SAM_FLASH_SECTOR_SIZE      256

void efl_lld_init(void) {

#if SAM_EFL_USE_EFL1 == TRUE
  /* Driver initialization.*/
  eflObjectInit(&EFLD1);
  EFLD1.flash = NVMCTRL_REGS;
#endif
}

flash_error_t efl_lld_program(void *instance, flash_offset_t offset,
                              size_t n, const uint8_t *pp) {
  EFlashDriver *devp = (EFlashDriver *)instance;
  flash_error_t err = FLASH_NO_ERROR;

  osalDbgCheck((instance != NULL) && (pp != NULL) && (n > 0U));
  osalDbgCheck(((size_t)offset + n) <= (size_t)efl_lld_descriptor.size);

  osalDbgAssert((devp->state == FLASH_READY) || (devp->state == FLASH_ERASE),
                "invalid state");

  /* No programming while erasing.*/
  if (devp->state == FLASH_ERASE) {
    return FLASH_BUSY_ERASING;
  }

  /* FLASH_PGM state while the operation is performed.*/
  devp->state = FLASH_PGM;

  /* IMPLEMENT */
  sam_flash_wait_busy(devp);
  sam_flash_clear_status(devp);
  uint8_t *address;
  /* Programming address aligned to flash lines.*/
  address = (uint8_t *)(efl_lld_descriptor.address + (offset));
  size_t pg_offset = ((uint32_t)address) % FLASH_PAGE_SIZE;
  /* If pg_offset occurred, write fully in that page first */
  if(pg_offset > 0 && n > FLASH_PAGE_SIZE) {
    size_t bytes_writing = FLASH_PAGE_SIZE - pg_offset;
    err = sam_flash_page_write(devp, address, pp, bytes_writing);
    if(err != FLASH_NO_ERROR) {
      goto error;
    }
    address += bytes_writing;
    pp += bytes_writing;
    n -= bytes_writing;
  }

  size_t num_pages = n / FLASH_PAGE_SIZE;
  while(num_pages > 0U) {
    err = sam_flash_page_write(devp, address, pp, FLASH_PAGE_SIZE);
    if(err != FLASH_NO_ERROR) {
      goto error;
    }
    address += FLASH_PAGE_SIZE;
    pp += FLASH_PAGE_SIZE;
    num_pages--;
    n -= FLASH_PAGE_SIZE;
  }
  if(n > 0) {
    err = sam_flash_page_write(devp, address, pp, n);
  }
error:
  /* Ready state again.*/
  devp->state = FLASH_READY;

  return err;
}

flash_error_t efl_lld_start_erase_sector(void *instance,
                                         flash_sector_t sector) {
  EFlashDriver *devp = (EFlashDriver *)instance;

  osalDbgCheck(instance != NULL);
  osalDbgCheck(sector < efl_lld_descriptor.sectors_count);
  osalDbgAssert((devp->state == FLASH_READY) || (devp->state == FLASH_ERASE),
                "invalid state");

  /* No erasing while erasing.*/
  if (devp->state == FLASH_ERASE) {
    return FLASH_BUSY_ERASING;
  }

  /* FLASH_PGM state while the operation is performed.*/
  devp->state = FLASH_ERASE;

  /* IMPLEMENT */
  sam_flash_wait_busy(devp);
  sam_flash_clear_status(devp);
  uint32_t address = (uint32_t)(efl_lld_descriptor.address +
                         flashGetSectorOffset(getBaseFlash(devp), sector));
  osalDbgCheck(address % SAM_FLASH_SECTOR_SIZE == 0);
  sam_flash_set_addr(devp, address);
  sam_flash_exc_cmd(devp, NVMCTRL_CTRLA_CMD_ER_Val);
  return FLASH_NO_ERROR;
}

flash_error_t efl_lld_query_erase(void *instance, uint32_t *msec) {
  EFlashDriver *devp = (EFlashDriver *)instance;
  flash_error_t err = FLASH_NO_ERROR;

  (void)msec;

  /* If there is an erase in progress then the device must be checked.*/
  if (devp->state == FLASH_ERASE) {

    /* IMPLEMENT */
    if(sam_flash_is_busy(devp) == 0) {
      devp->state = FLASH_READY;
      err = sam_flash_get_error(devp);

    }
    else {
      if(msec != NULL) {
        *msec = (uint32_t)SAM_FLASH_WAIT_TIME_MS;
      }
      err = FLASH_BUSY_ERASING;
    }

  }
  else {
    err = FLASH_NO_ERROR;
  }
  return err;
}

flash_error_t efl_lld_verify_erase(void *instance, flash_sector_t sector) {
  EFlashDriver *devp = (EFlashDriver *)instance;
  flash_error_t err = FLASH_NO_ERROR;
  uint32_t *address;
  unsigned i;

  osalDbgCheck(instance != NULL);
  osalDbgCheck(sector < efl_lld_descriptor.sectors_count);
  osalDbgAssert((devp->state == FLASH_READY) || (devp->state == FLASH_ERASE),
                "invalid state");

  /* No verifying while erasing.*/
  if (devp->state == FLASH_ERASE) {
    return FLASH_BUSY_ERASING;
  }

  /* IMPLEMENT */
  /* Address of the sector.*/
  address = (uint32_t *)(efl_lld_descriptor.address +
                         flashGetSectorOffset(getBaseFlash(devp), sector));
  devp->state = FLASH_READ;
  osalDbgCheck((uint32_t)address % SAM_FLASH_SECTOR_SIZE == 0);
  /* Scanning the sector space.*/
  for (i = 0U; i < SAM_FLASH_SECTOR_SIZE / sizeof(uint32_t); i++) 
  {
    if (*address != 0xFFFFFFFFUL) {
      err = FLASH_ERROR_VERIFY;
      break;
    }
    address++;
  }

  /* Ready state again.*/
  devp->state = FLASH_READY;

  return err;
}
